# Add2Num

./: .gitignore  CMakeLists.txt  README.md
src/: Logger.h  MyBigNumber.cpp  MyBigNumber.h  main.cpp
tests/: test.cpp
